# myj-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/myj_mcp/: client.py  models.py  server.py
tests/: test_server.py
