[project]
name = "myj-mcp"
version = "0.1.0"
description = "MCP server for uPace ERJCC (My J) — JCC class scheduling, reservations, and facility management"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
myj-mcp = "myj_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
